[package]
name = "glfm_markdown"
version = "0.0.24"
edition = "2021"
authors = ["digitalmoksha <bwalker@gitlab.com>"]
description = "GitLab Flavored Markdown parser and formatter. 100% CommonMark-compatible. Experimental."
publish = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "glfm_markdown"
required-features = ["cli"]

[dependencies]
clap = { version = "4.0", optional = true, features = ["derive", "string"] }
comrak = { version = "0.31.0", default-features = false, features = ["shortcodes"] }
magnus = "0.6.2"
rb-sys = { version = "0.9.86", default-features = false, features = ["stable-api-compiled-fallback"] }

[features]
cli = ["clap", "comrak/syntect"]
